# sc-v2-api

./: LICENSE  README.md  pyproject.toml
sc2py/: __init__.py
sc2py/core/: batch.py  request.py  session.py
sc2py/exceptions/: __init__.py
sc2py/services/: __init__.py  base.py  collections.py  contact_person.py  organizational.py  sales_territory.py
sc2py/services/_internal/: __init__.py
scv2_api/: api.py  client_batch.py  exception.py  services.py  session.py
scv2_api/core/: session.py
scv2_api/exceptions/: api_exceptions.py
scv2_api/services/: collections.py
scv2_api/services/_internal/: validators.py
scv2py/: __init__.py
scv2py/core/: batch.py  request.py  session.py
scv2py/exceptions/: __init__.py
scv2py/services/: __init__.py  account.py  account_hiearchy.py  activity_assignment.py  activity_plan.py  appointment.py  base.py  case.py  chat.py  collections_integration.py  competitor_product.py  contact_person.py  document.py  employee.py  functional_location.py  individual_customer.py  installed_base.py  interaction_email.py  interaction_phone.py  lead.py  opportunity.py  organizational.py  organizational_unit.py  product.py  product_group.py  registered_product.py  sales_territory.py  survey.py
scv2py/services/_internal/: validators.py
